# vaffelbot-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README  README.md  docker-compose.yaml  justfile
.github/workflows/: build-docker.yaml  redeploy.yaml  test.yaml
.sqlx/: query-3bb5b899ca089eed55edb6c37716428cd4caf8b10836d85e32a5a6d2ae589eba.json  query-3ca556a681168f1467826722207904c32feb630f6ebfa65a7c8b3d84e3766e07.json  query-658fb14e63ec85433d0662151b0a199e1ca38984020a3c54a0dd0ea035043683.json  query-7187b571969c741edbc079028bf27ae6614e9e2ce1bd97d4d75c90b97aaf3bce.json  query-bfea23a5a6ba80a5e8a52607b5741437c767c0aa8928590674d8c813a97b11d3.json  query-c7e096c290072e439cadbd334e14780b989e518baa62572e5d6cb951d7d682e3.json  query-f069ff1e201a82a621826ed9ff5660f5836d131e3b6bef2acdf5ac65f606dcdf.json
migrations/: 20250209_create_orders.sql  20250212_add_guild_id_to_orders.sql
src/: bot.rs  commands.rs  config.rs  lib.rs  main.rs  queue.rs  server.rs
src/adapters/: mod.rs
src/adapters/discord/: mod.rs
src/adapters/discord/commands/: bake.rs  close.rs  open.rs  ping.rs  queue_size.rs  waffle.rs
src/adapters/http/: mod.rs
src/commands/: bake.rs  close.rs  empty.rs  mod.rs  open.rs  ping.rs  queue_size.rs  waffle.rs
src/domain/: mod.rs  order.rs  queue.rs
src/infrastructure/: mod.rs  postgres_order_repository.rs  redis_queue_repository.rs
