[package]
name = "vaffelbot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
redis = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
testcontainers-modules = { version = "0.11.6", features = ["redis"] }
testcontainers = { version = "0.23.3", features = ["blocking"]}
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
poise = "0.6.1"
