[package]
name = "vaffelbot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
redis = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = "0.12.5"
testcontainers-modules = { version = "0.11.6", features = ["redis"] }
testcontainers = { version = "0.23.3", features = ["blocking"]}
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
poise = "0.6.1"
