[package]
name = "vaffelbot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
axum = "0.8.8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
poise = "0.6.1"
redis = { version = "0.30.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = "0.12.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "migrate"] }
testcontainers = { version = "0.23.3", features = ["blocking"]}
testcontainers-modules = { version = "0.11.6", features = ["redis"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
